# ChangeLog for media-gfx/imagemagick
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/imagemagick/ChangeLog,v 1.258 2008/01/05 18:07:26 maekke Exp $

*imagemagick-6.3.7.9 (05 Jan 2008)

  05 Jan 2008; Markus Meier <maekke@gentoo.org> +imagemagick-6.3.7.9.ebuild:
  bump, this should finally fix bug #153476

*imagemagick-6.3.7.8 (30 Dec 2007)

  30 Dec 2007; Markus Meier <maekke@gentoo.org> +imagemagick-6.3.7.8.ebuild:
  bump, this fixes bug #186683 and bug #201278

  07 Dec 2007; Markus Meier <maekke@gentoo.org> imagemagick-6.3.0.5.ebuild,
  imagemagick-6.3.0.5-r1.ebuild, imagemagick-6.3.3.ebuild,
  imagemagick-6.3.4.ebuild, imagemagick-6.3.4-r1.ebuild,
  imagemagick-6.3.5.9.ebuild, imagemagick-6.3.5.10.ebuild:
  correct the LICENSE, bug #174425

  29 Sep 2007; Jeroen Roovers <jer@gentoo.org> imagemagick-6.3.5.10.ebuild:
  Stable for HPPA (bug #186030).

  28 Sep 2007; Wulf C. Krueger <philantrop@gentoo.org>
  imagemagick-6.3.5.10.ebuild:
  Marked stable on amd64 as per security bug 186030.

  28 Sep 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  imagemagick-6.3.5.10.ebuild:
  ppc stable, bug #186030

  28 Sep 2007; Raúl Porcel <armin76@gentoo.org>
  imagemagick-6.3.5.10.ebuild:
  alpha/ia64/x86 stable wrt security #186030

  28 Sep 2007; Ferris McCormick <fmccor@gentoo.org>
  imagemagick-6.3.5.10.ebuild:
  Sparc stable --- Security Bug #186030 --- see Comment #22 for reason for this
  version.

  28 Sep 2007; Joshua Kinard <kumba@gentoo.org> imagemagick-6.3.5.9.ebuild:
  Stable on mips, per #186030.

  27 Sep 2007; Brent Baude <ranger@gentoo.org> imagemagick-6.3.5.10.ebuild:
  Marking imagemagick-6.3.5.10 ppc64 stable for bug 186030

  27 Sep 2007; Hans de Graaff <graaff@gentoo.org>
  imagemagick-6.3.5.10.ebuild:
  Review comments: use emake instead of make, add die message, don't install
  useless installation documents.

*imagemagick-6.3.5.10 (27 Sep 2007)
