@@ -9,14 +9,12 @@ DIST ImageMagick-6.3.3-8.tar.bz2 5633820 RMD160 fe9ad987909ae1364257de54463ff1f0
 DIST ImageMagick-6.3.4-9.tar.bz2 5813934 RMD160 cab331e23c1a49ac9db403d823fa807efbf69a40 SHA1 5869d2ee1d63b849b899637c7a39320d96022ab4 SHA256 e25eb510b156750afc099d24ba2d104d7b47fbd7d460e07463ef48b751300dde
 DIST ImageMagick-6.3.5-10.tar.bz2 7571418 RMD160 b8436a7a5ada2793177f47621d031c89753b770c SHA1 f2fb1b73895a335c553c40b705af7ea179700316 SHA256 a4d26fb438b15502cc4fb7842111d75d0bd4958c484b3d1bbe25dc60b4e63f84
 DIST ImageMagick-6.3.5-9.tar.bz2 7645732 RMD160 6d2e74a1b8de26a095c2185a8b2c21259e9fb79b SHA1 71de22d770a4cb3de94c1925a03fba6d16e71513 SHA256 60ae398533a48b9edba17f1ede68525fd6aca143aaa8b430bc4c4ece40554596
-DIST ImageMagick-6.3.7-8.tar.bz2 7504033 RMD160 e6db2b7e25110b279c3ef7b24c0e2f9946f1470a SHA1 00236386bdec96809f400f760cb11cba350bad19 SHA256 3a9299cad6b53e7f1ec652b0250a9eb23c48d75590de2ba5fcb791ac9e3bc813
 DIST ImageMagick-6.3.7-9.tar.bz2 7506758 RMD160 fe5deec4b46b15f09ddad05419dcd5c31bd55fb5 SHA1 4be3bb6396736078ff4eb78407097d8c9a16f7af SHA256 60de02c4fb32211c1871173889d7046affbdd3d2d77f215604a2feddd1d168e8
-EBUILD imagemagick-6.3.0.5-r1.ebuild 2949 RMD160 e7c3e699266f15be20bef79cb6d871c75db174d0 SHA1 88310522a4f944c327ecfee50ccb866908d4df26 SHA256 7924200812b93dd2405ffe1cd3ed5aa95b6fed143689a02b58ff9fffd0166d75
-EBUILD imagemagick-6.3.3.ebuild 2726 RMD160 eddb2da1105bc58b6feabf8c7bc5484c31ab8945 SHA1 f9be380d2d5fea941d0b56aea09815839bf7c5d3 SHA256 2b97d5bd65289c77fbcb836bb3890c78e5df6bf09326c1ad33ecb4d397c2b27b
-EBUILD imagemagick-6.3.4-r1.ebuild 3048 RMD160 44471b9a778f4e00fcc45ef8d86106fd8fd7b55a SHA1 8b8030eaa90a14440edee452b0f63c59bb3836a1 SHA256 e2042f700d24dea5e0a42158bae983c663195d3cb8673adcc4df271e5b1a9177
-EBUILD imagemagick-6.3.5.10.ebuild 3097 RMD160 01f17c5bb03ccf3fd17d1c812e1a741f019dd6b1 SHA1 08fd2311094630eda2539605bedb958fb882fdc4 SHA256 9b75bfe05f9f8af03230693553be21646d2ae7b00a4fcf289aa97c872b4edf5c
-EBUILD imagemagick-6.3.5.9.ebuild 3086 RMD160 0f17b96338027ddc13289564178d9d9ef246641e SHA1 3c6f92e0f87d68965edc95687b8ca814f3712761 SHA256 22d539358c75d3cb012c41768b98398634100ca1a6e33945598425e5205cbf29
-EBUILD imagemagick-6.3.7.8.ebuild 3150 RMD160 16dd55bff4762f483486467a695b26ec006356bb SHA1 4c71ab5c3119bba629b93441440f4b626dd886d6 SHA256 50728046cccf6a3b9703db775bee804fd11cb76f9766b7b97a0ca96fc5e1075e
-EBUILD imagemagick-6.3.7.9.ebuild 3081 RMD160 1bb8fecc8c7116f0532fe594fbe2dfd25347d58a SHA1 8dc6fee09a0f5d989a4a56fc0cc9ddd9947659f1 SHA256 34c49acef223a207d8895f8325935b37879c1ad02438724ea4ab0a8c3e24f504
-MISC ChangeLog 38599 RMD160 4ef03dfb091218f41ecccf0a63db81164f658614 SHA1 8b650f2472cd6a258b89ce0546c653a17435e52a SHA256 a9e4225108b97d5790f4ec5d4fa0a701eb21540a4cdb1b20d8321eae081accd4
+EBUILD imagemagick-6.3.0.5-r1.ebuild 2967 RMD160 a5dc34471ddb45f0673aa3707c7421e148f72b6e SHA1 38c1bd99d3855e0f561f2006883b02fe6c282c78 SHA256 5a379d87191b6be28714c07e790ac14e8aaca223ac04d2d55c0dacf01d9ca366
+EBUILD imagemagick-6.3.3.ebuild 2744 RMD160 083ce2fe3c27a8e531cd8240d2225620280c35dc SHA1 98dab3697f6989f043b9832ddd655322f03f9c68 SHA256 0bb72471adc9e4d979a5daa9cc9a90587d00dfad4b46e5f01e68d9cf0ee92f72
+EBUILD imagemagick-6.3.4-r1.ebuild 3066 RMD160 ecb8a970068866a053edc579d3965cf20d58964d SHA1 07539e51d9d0aede4806a3250158245e7e445988 SHA256 4b7b6fb82b1aaab43aad560e02d2f56712e95cd674d443e8bfcfcd7b2bccda4b
+EBUILD imagemagick-6.3.5.10.ebuild 3115 RMD160 6795f76b0f190fc69dc0f9c3364986e4b66b8199 SHA1 f2cec1dee2b323fe142ef755f0de2ed06883f120 SHA256 7ed8c433b0b5e52b3e055cf36fbb099c269c3b244160ef9b9a311bb8c563ace7
+EBUILD imagemagick-6.3.5.9.ebuild 3104 RMD160 70609abdedbf654e7a3dd606cc44ffd21f8d60df SHA1 cde8837c1947f2b7b900fe1df1b921f38b6775b8 SHA256 84c3ccdd0ed56f4c16a6aabbd7e7f82be99420bef7e35bfe8abb703f89132e11
+EBUILD imagemagick-6.3.7.9.ebuild 3293 RMD160 2ac17066f980c1b796caba90db743d274791cd24 SHA1 b363e7bb81a6cb4913a16464e6fb1af5c9d0bd0f SHA256 da2d4519a16c381652464fa2ad9ec73f128b4f67fb0e525c869c0c391371b46f
+MISC ChangeLog 38783 RMD160 6ae8cbdd02345f9f17ae64142758322b7fb47948 SHA1 c4a9cc7b90cba2f466aeb74f39819d577e5e5611 SHA256 fc151e654880333b0ea217e265bc950cf0e9c92711d6ce9de57fba9bebaee1ae
 MISC metadata.xml 224 RMD160 00e125be58c08e634a6053e3d265d2f36aab18ad SHA1 07c66bc3a581bf683765507da34f69623cb94ad8 SHA256 d7920747aa57936d24496c8ee5016502a9acc8108a5b01e8d1b813813d4250b3
