@@ -1,113 +1,0 @@
-# Copyright 1999-2007 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/imagemagick/imagemagick-6.3.7.8.ebuild,v 1.1 2007/12/30 13:26:53 maekke Exp $
-
-EAPI="prefix"
-
-inherit eutils multilib perl-app
-
-MY_PN=ImageMagick
-MY_P=${MY_PN}-${PV%.*}
-MY_P2=${MY_PN}-${PV%.*}-${PV#*.*.*.}
-
-DESCRIPTION="A collection of tools and libraries for many image formats"
-HOMEPAGE="http://www.imagemagick.org/"
-SRC_URI="ftp://ftp.imagemagick.org/pub/${MY_PN}/${MY_P2}.tar.bz2"
-
-LICENSE="imagemagick"
-SLOT="0"
-KEYWORDS="~amd64 ~ia64 ~ppc-macos ~x86 ~x86-macos ~x86-solaris"
-IUSE="bzip2 djvu doc fpx graphviz gs hdri jbig jpeg jpeg2k lcms mpeg nocxx openexr
-	perl png q8 q32 svg tiff truetype X wmf xml zlib"
-
-RDEPEND="bzip2? ( app-arch/bzip2 )
-	djvu? ( app-text/djvu )
-	fpx? ( media-libs/libfpx )
-	graphviz? ( >=media-gfx/graphviz-2.6 )
-	gs? ( virtual/ghostscript )
-	jbig? ( media-libs/jbigkit )
-	jpeg? ( >=media-libs/jpeg-6b )
-	jpeg2k? ( media-libs/jasper )
-	lcms? ( >=media-libs/lcms-1.06 )
-	mpeg? ( >=media-video/mpeg2vidcodec-12 )
-	openexr? ( media-libs/openexr )
-	perl? ( >=dev-lang/perl-5.8.6-r6 !=dev-lang/perl-5.8.7 )
-	png? ( media-libs/libpng )
-	svg? ( >=gnome-base/librsvg-2.9.0 )
-	tiff? ( >=media-libs/tiff-3.5.5 )
-	xml? ( >=dev-libs/libxml2-2.4.10 )
-	truetype? ( =media-libs/freetype-2* media-fonts/corefonts )
-	wmf? ( >=media-libs/libwmf-0.2.8 )
-	zlib? ( sys-libs/zlib )
-	X? (
-		x11-libs/libXext
-		x11-libs/libXt
-		x11-libs/libICE
-		x11-libs/libSM
-	)
-	!dev-perl/perlmagick
-	!sys-apps/compare"
-
-DEPEND="${RDEPEND}
-	>=sys-apps/sed-4
-	>=sys-devel/libtool-1.5.2-r6
-	X? ( x11-proto/xextproto )"
-
-S="${WORKDIR}/${MY_P}"
-
-src_compile() {
-	local quantum
-	if use q32 ; then
-		quantum="${quantum} --with-quantum-depth=32"
-	elif use q8 ; then
-		quantum="${quantum} --with-quantum-depth=8"
-	else
-		quantum="${quantum} --with-quantum-depth=16"
-	fi
-
-	econf \
-		--with-threads \
-		--with-modules \
-		$(use_with perl) \
-		--with-gs-font-dir="${EPREFIX}"/usr/share/fonts/default/ghostscript \
-		${quantum} \
-		$(use_enable hdri) \
-		$(use_with truetype windows-font-dir "${EPREFIX}"/usr/share/fonts/corefonts) \
-		$(use_with !nocxx magick-plus-plus) \
-		$(use_with bzip2 bzlib) \
-		$(use_with djvu) \
-		$(use_with fpx) \
-		$(use_with gs dps) \
-		$(use_with gs gslib) \
-		$(use_with graphviz gvc) \
-		$(use_with jbig) \
-		$(use_with jpeg jpeg) \
-		$(use_with jpeg2k jp2) \
-		$(use_with lcms) \
-		$(use_with mpeg mpeg2) \
-		$(use_with png) \
-		$(use_with svg rsvg) \
-		$(use_with tiff) \
-		$(use_with truetype ttf) \
-		$(use_with wmf) \
-		$(use_with xml) \
-		$(use_with zlib) \
-		$(use_with X x) \
-		$(use_with openexr) \
-		|| die "econf failed"
-	emake || die "compile problem"
-}
-
-src_install() {
-	emake DESTDIR="${D}" install || die "Installation of files into image failed"
-	dosed "s:-I/usr/include ::" "${EPREFIX}"/usr/bin/Magick{,++}-config
-
-	# dont need these files with runtime plugins
-	rm -f "${ED}"/usr/$(get_libdir)/*/*/*.{la,a}
-
-	! use doc && rm -r "${ED}"/usr/share/doc/${PF}/html
-	dodoc NEWS ChangeLog AUTHORS README.txt
-
-	# Fix perllocal.pod file collision
-	use perl && fixlocalpod
-}
