@@ -1,6 +1,10 @@
 # ChangeLog for media-gfx/imagemagick
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/imagemagick/ChangeLog,v 1.258 2008/01/05 18:07:26 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/imagemagick/ChangeLog,v 1.259 2008/01/07 23:10:54 maekke Exp $
+
+  07 Jan 2008; Markus Meier <maekke@gentoo.org> -imagemagick-6.3.7.8.ebuild,
+  imagemagick-6.3.7.9.ebuild:
+  add a check for djvu to be built with threads, bug #204768 and remove old
 
 *imagemagick-6.3.7.9 (05 Jan 2008)
 
